--- a/development.yml
+++ b/development.yml
@@ -1,6 +1,7 @@
 version: "3"
 volumes:
-  db:
+  postgresqldata:
+  mysqldata:
   media:
 services:
 
@@ -14,29 +15,43 @@ services:
 
   # PROFESSIONAL SITE
   professional-site:
-    image: jteppinette/professional-site
+    image: professional-site
     environment:
       - VIRTUAL_HOST=localhost,home.localhost
 
-  # DB
-  db:
+  # POSTGRESQL
+  postgresql:
+    image: postgres:9.6.2
+    env_file: .env
+    environment:
+      - POSTGRES_USER=db
+    volumes:
+      - postgresqldata:/var/lib/postgresql/data
+
+  # MYSQL
+  mysql:
     image: mysql
     env_file: .env
     environment:
       - MYSQL_USER=db
       - MYSQL_RANDOM_ROOT_PASSWORD=yes
     volumes:
-      - db:/var/lib/mysql
+      - mysqldata:/var/lib/mysql
 
   # GO JSON API SEED
   go-json-api-seed:
-    image: jteppinette/go-json-api-seed
+    image: go-json-api-seed
+    env_file: .env
     environment:
       - VIRTUAL_HOST=go-json-api-seed.localhost
+      - DB_NAME=gojsonapiseed
+      - DB_PORT=5432
+    links:
+      - postgresql:db
 
   # AMP
   amp:
-    image: jteppinette/amp
+    image: amp
     env_file: .env
     environment:
       - VIRTUAL_HOST=amp.localhost
@@ -44,23 +59,23 @@ services:
       - DB_NAME=amp
       - DB_PORT=3306
     links:
-      - db
+      - mysql:db
     volumes:
       - media:/app/media
 
   # DJANGO API SEED
   django-api-seed:
-    image: jteppinette/django-api-seed
+    image: django-api-seed
     env_file: .env
     environment:
       - VIRTUAL_HOST=django-api-seed.localhost
       - DB_NAME=djangoapiseed
       - DB_PORT=3306
     links:
-      - db
+      - mysql:db
 
   angular-seed:
-    image: jteppinette/angular-seed
+    image: angular-seed
     environment:
       - VIRTUAL_HOST=angular-seed.localhost
     links:
@@ -68,44 +83,44 @@ services:
 
   # RISK MANAGED
   risk-managed:
-    image: jteppinette/risk-managed
+    image: risk-managed
     env_file: .env
     environment:
       - VIRTUAL_HOST=risk-managed.localhost
       - DB_NAME=riskmanaged
       - DB_PORT=3306
     links:
-      - db
+      - mysql:db
     volumes:
       - media:/app/media
 
   # WATER DRAGON
   water-dragon-api:
-    image: jteppinette/water-dragon-api
+    image: water-dragon-api
     env_file: .env
     environment:
       - VIRTUAL_HOST=api.water-dragon.localhost
       - DB_NAME=waterdragon
       - DB_PORT=3306
     links:
-      - db
+      - mysql:db
     volumes:
       - media:/app/media
 
   # PERAGRIN
   peragrin-client:
-    image: jteppinette/peragrin-client
+    image: peragrin-client
     environment:
       - VIRTUAL_HOST=app.peragrin.localhost
     links:
       - peragrin-api:upstream
 
   peragrin-api:
-    image: jteppinette/peragrin-api
+    image: peragrin-api
     env_file: .env
     environment:
       - VIRTUAL_HOST=api.peragrin.localhost
       - DB_NAME=peragrin
       - DB_PORT=3306
     links:
-      - db
+      - mysql:db
