--- a/production.yml
+++ b/production.yml
@@ -162,6 +162,6 @@ services:
   peragrin-home:
     image: jteppinette/peragrin-home
     environment:
-      - VIRTUAL_HOST=peragrin.localhost
+      - VIRTUAL_HOST=peragrin.jteppinette.com
       - LETSENCRYPT_HOST=peragrin.jteppinette.com
       - LETSENCRYPT_EMAIL=josheppinette@icloud.com
