Update Django API Seed to GitLab

--- a/files/docker-compose.yml
+++ b/files/docker-compose.yml
@@ -157,7 +157,7 @@ services:
 
   # API SEED
   django-api-seed:
-    image: jteppinette/django-api-seed
+    image: registry.gitlab.com/jteppinette/django-api-seed
     networks:
       traefik:
       api-seed:
