--- a/stack.yml
+++ b/stack.yml
@@ -49,7 +49,7 @@
         mode: 0700
 
     - name: Deploy Stack
-      command: docker stack deploy -c /etc/jteppinette/docker-compose.yml jteppinette
+      command: docker stack deploy --with-registry-auth -c /etc/jteppinette/docker-compose.yml jteppinette
       register: result
 
     - name: Deploy Stack Report
