--- a/files/docker-compose.yml
+++ b/files/docker-compose.yml
@@ -114,7 +114,7 @@ services:
 
   # PROFESSIONAL
   professional-site:
-    image: registry.gitlab.com/jteppinette/professional-site
+    image: professional-site
     networks:
       - traefik
       - professional
@@ -131,7 +131,7 @@ services:
 
   # AMP
   amp:
-    image: registry.gitlab.com/jteppinette/amp
+    image: amp
     networks:
       - traefik
       - amp
@@ -157,7 +157,7 @@ services:
 
   # API SEED
   django-api-seed:
-    image: registry.gitlab.com/jteppinette/django-api-seed
+    image: django-api-seed
     networks:
       traefik:
       api-seed:
@@ -180,7 +180,7 @@ services:
           - node.role == worker
 
   angular-seed:
-    image: registry.gitlab.com/jteppinette/angular-seed
+    image: angular-seed
     networks:
       - traefik
       - api-seed
@@ -197,7 +197,7 @@ services:
 
   # GO JSON API SEED
   go-json-api-seed:
-    image: registry.gitlab.com/jteppinette/go-json-api-seed
+    image: go-json-api-seed
     networks:
       - traefik
       - go-json-api-seed
@@ -219,7 +219,7 @@ services:
 
   # RISK MANAGED
   risk-managed:
-    image: registry.gitlab.com/jteppinette/risk-managed
+    image: risk-managed
     networks:
       - traefik
       - risk-managed
@@ -244,7 +244,7 @@ services:
 
   # WATER DRAGON
   water-dragon-api:
-    image: registry.gitlab.com/jteppinette/water-dragon-api
+    image: water-dragon-api
     networks:
       - traefik
       - water-dragon
